updated api documentation, created api verify route; other minor changes to views
